--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>carlos-castaneda-arsw-t2</artifactId>
+    <artifactId>coronavirusAPI</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <name>coronavirusAPI</name>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
